		by NetBSD/sgimips' Xorg driver.
20181031	Better separation of pckbc scancode translation tables 1, 2,
		and 3, and beginning to play around with PS/2 mouse movement.
20181101	Fixes to the SGI O2 mec ethernet implementation's register
		alignment to correctly support mixed 32/64-bit access.
20181102	Adding some PHY/MII related parts of the O2 mec device (not
		needed by NetBSD/OpenBSD it seems, but by the O2 PROM).
20181106	Splitting SGI O2 rectangle drawing and line drawing into
		separate parts; NetBSD/sgimips' Xorg now looks reasonable.
20181107	Progress on PS/2 mouse emulation; NetBSD accepts it as "pms0
		at macekbc0" in the SGI O2 emulation mode. (No actual host
		mouse input yet though.)
20181108	Implementing host X11 mouse input for the pckbc device.
20181112	More work on the O2 rendering engine Raster Ops. Moving windows
		within NetBSD's X11 now looks as it should.
20181115	Changing the PCI product ID for the AIC7880 SCSI controller in
		the SGI O2 emulation mode to match my real O2 (0x9004, 0x8078).
20181120	Continuing on SGI O2 graphics: "overlays" (seem to always be
		8 bits deep?).
20181121	Getting rid of a hack in the O2 rendering code for "stipple
		patterns", by looking at the "stipple mode" register.
20181122	Fixing an old very annoying bug where floating point number
		0x0 was interpreted as 2.22507e-308 rather than 0.0. Thanks to
		Maya Rashish (coypu@SDF.ORG) for reporting the bug.
20181203	Beginning on test/floatingpoint infrastructure. Fixing some
		more floating point bugs.

==============  RELEASE 0.6.1  ==============

20181217	Implementing the ARM uxtb instruction.
		Implementing a simple Android boot.img file loader, and two
		dummy Android ARM machines ("Sony Xperia Mini" and "Finow X5
		Air").
		Treating ARM dsb/dmb/isb instructions as NOPs for now.
20190101	Implementing the ARM v7 movt and movw instructions.
20190103	Implementing the ARM sxth, uxth, bfi, and ubfx instructions.